fix(HomeMasonryGrid): Fix image wraping on IOS safari mobile

--- a/components/HomeMasonryGrid/HomeMasonryGrid.module.css
+++ b/components/HomeMasonryGrid/HomeMasonryGrid.module.css
@@ -62,4 +62,5 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  float: left;
 }
